--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../PagesCommon/framework/bootstrap/css/bootstrap.min.css">
+    <script src="../PagesCommon/framework/jquery/jquery.min.js"></script>
+    <script src="../PagesCommon/framework/vue/dist/vue.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../PagesCommon/vue-component/v-cloak.css">
     <title>PagesCommon</title>
 </head>
 <body>
-    <a href="https://github.com/hirorich/PagesCommon#readme">README.md</a>
+    <div id="main-component"></div>
+
+    <!-- Vue定義 -->
+    <script src="index.js"></script>
+
+    <script src="../PagesCommon/framework/popper/dist/umd/popper.min.js"></script>
+    <script src="../PagesCommon/framework/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
